bugfix: removed double margin on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,10 +94,7 @@ body {
     position: relative;
     padding-bottom: 5rem;
 }
-body > * {
-    margin-left: var(--global-whitespace-1);
-    margin-right: var(--global-whitespace-1);
-}
+
 @media (min-width: 576px) {
 
     body > *{
